fix z-index on page 3

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -15,7 +15,7 @@ header {
 
     input {
         position: fixed;
-        z-index: 1;
+        z-index: 2;
         width: 35px;
         height: 35px;
         opacity: 0;
@@ -28,7 +28,7 @@ header {
         background: transparent;
         border: 0;
         position: fixed;
-        z-index: 2;
+        z-index: 3;
         pointer-events: none;
         margin: 0;
     
@@ -102,12 +102,14 @@ img {
 .page3 {
     .bottom {
         position: relative;
+        z-index: -1;
     }
     .center {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        z-index: 1;
     }
 }
 
